Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29284

Mac: Text drawing fails with raster when applying a negative scale to the painter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • None
    • 5.0.0
    • GUI: Painting
    • None
    • macOS
    • I3c24cee091786faae8a5c5dd756d208163330bfc cd1e21cf09c2512b58723ad527dcc1aad102787b

    Description

      The following test fails with raster but works with opengl

      https://codereview.qt-project.org/#change,45591

      Possibly because the raster engine produces a flipped glyph-cache, which the coretext engine doesnt support, so we should return false for supportsTranform in that case.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            vestbo Tor Arne Vestbø
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes